--- a/login.html
+++ b/login.html
@@ -1,154 +1,130 @@
-    // Görev detayları için global değişken
-let currentTaskId = null;
-// Görev detaylarını göster
-function showTaskDetail(taskId) {
-    currentTaskId = taskId;
-    const tasks = JSON.parse(localStorage.getItem('tasks') || '[]');
-    const task = tasks.find(t => t.id === taskId) || {
-        id: taskId,
-        title: 'Rapor Hazırlama',
-        description: 'Aylık faaliyet raporunun hazırlanması',
-        assignee: '1',
-        dueDate: '2023-12-25',
-        priority: 'medium',
-        points: 10,
-        status: 'pending',
-        progress: 30,
-        timeline: [
-            {
-                date: '2023-12-01',
-                action: 'Görev oluşturuldu',
-                user: 'Ahmet Yılmaz'
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AYBÜ Görev Takip - Giriş</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', sans-serif;
+        }
+
+        body {
+            background-color: #f8f9fa;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .login-container {
+            background: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            width: 400px;
+        }
+
+        .login-header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .login-header i {
+            font-size: 40px;
+            color: #003366;
+            margin-bottom: 10px;
+        }
+
+        .login-header h1 {
+            color: #003366;
+            font-size: 24px;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            color: #666;
+        }
+
+        .form-group input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        .login-btn {
+            width: 100%;
+            padding: 12px;
+            background: #003366;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .login-btn:hover {
+            background: #002855;
+        }
+
+        .forgot-password {
+            text-align: center;
+            margin-top: 15px;
+        }
+
+        .forgot-password a {
+            color: #003366;
+            text-decoration: none;
+            font-size: 14px;
+        }
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+    <div class="login-container">
+        <div class="login-header">
+            <i class="fas fa-university"></i>
+            <h1>AYBÜ Görev Takip</h1>
+        </div>
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="username">Kullanıcı Adı</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Şifre</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="login-btn">Giriş Yap</button>
+        </form>
+        <div class="forgot-password">
+            <a href="#">Şifremi Unuttum</a>
+        </div>
+    </div>
+
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+            
+            // Örnek kullanıcı kontrolü
+            if(username === 'admin' && password === 'admin123') {
+                window.location.href = 'index.html';
+            } else {
+                alert('Kullanıcı adı veya şifre hatalı!');
             }
-        ],
-        comments: []
-    };
-    // Modal içeriğini doldur
-    document.getElementById('taskDetailTitle').textContent = task.title;
-    document.getElementById('taskDetailDescription').textContent = task.description;
-    document.getElementById('taskDetailAssignee').textContent = getAssigneeName(task.assignee);
-    document.getElementById('taskDetailDueDate').textContent = formatDate(task.dueDate);
-    document.getElementById('taskDetailPoints').textContent = `${task.points} Puan`;
-    document.getElementById('taskStatusSelect').value = task.status;
-    
-    // İlerleme çubuğunu güncelle
-    const progressBar = document.getElementById('taskProgress');
-    if (progressBar) {
-        progressBar.style.width = `${task.progress || 0}%`;
-    }
-    // Öncelik rozetini güncelle
-    const priorityBadge = document.getElementById('taskPriorityBadge');
-    if (priorityBadge) {
-        priorityBadge.className = `priority-indicator priority-${task.priority}`;
-        priorityBadge.textContent = formatPriority(task.priority);
-    }
-    // Görev geçmişini güncelle
-    updateTaskTimeline(task.timeline || []);
-    // Yorumları yükle
-    loadComments(task.comments || []);
-    // Modalı göster
-    document.getElementById('taskDetailModal').style.display = 'block';
-}
-// Görev geçmişini güncelle
-function updateTaskTimeline(timeline) {
-    const timelineContainer = document.getElementById('taskTimeline');
-    if (!timelineContainer) return;
-    timelineContainer.innerHTML = timeline.map(item => `
-        <div class="timeline-item">
-            <div class="timeline-date">${formatDate(item.date)}</div>
-            <div class="timeline-content">
-                <strong>${item.user}</strong> ${item.action}
-            </div>
-        </div>
-    `).join('');
-}
-// Yorumları yükle
-function loadComments(comments) {
-    const commentsContainer = document.getElementById('taskComments');
-    if (!commentsContainer) return;
-    if (comments.length === 0) {
-        commentsContainer.innerHTML = '<p class="no-comments">Henüz yorum yapılmamış.</p>';
-        return;
-    }
-    commentsContainer.innerHTML = comments.map(comment => `
-        <div class="comment-item">
-            <div class="comment-header">
-                <span class="comment-author">${comment.author}</span>
-                <span class="comment-date">${formatDate(comment.date)}</span>
-            </div>
-            <div class="comment-content">${comment.text}</div>
-        </div>
-    `).join('');
-}
-// Yorum ekle
-function addComment(event) {
-    event.preventDefault();
-    if (!currentTaskId) return;
-    const commentText = event.target.comment.value;
-    const tasks = JSON.parse(localStorage.getItem('tasks') || '[]');
-    const taskIndex = tasks.findIndex(t => t.id === currentTaskId);
-    if (taskIndex === -1) {
-        tasks.push({
-            id: currentTaskId,
-            comments: []
         });
-    }
-    const task = tasks[taskIndex] || tasks[tasks.length - 1];
-    if (!task.comments) {
-        task.comments = [];
-    }
-    const comment = {
-        id: Date.now(),
-        text: commentText,
-        author: JSON.parse(localStorage.getItem('profileData'))?.fullName || 'Anonim',
-        date: new Date().toISOString()
-    };
-    task.comments.push(comment);
-    localStorage.setItem('tasks', JSON.stringify(tasks));
-    // Yorum listesini güncelle
-    loadComments(task.comments);
-    event.target.reset();
-    showNotification('Yorum başarıyla eklendi', 'success');
-}
-// Görev durumunu güncelle
-function updateTaskStatus(newStatus) {
-    if (!currentTaskId) return;
-    const tasks = JSON.parse(localStorage.getItem('tasks') || '[]');
-    const taskIndex = tasks.findIndex(t => t.id === currentTaskId);
-    if (taskIndex === -1) {
-        tasks.push({
-            id: currentTaskId,
-            status: newStatus,
-            timeline: []
-        });
-    }
-    const task = tasks[taskIndex] || tasks[tasks.length - 1];
-    const oldStatus = task.status;
-    task.status = newStatus;
-    // Görev geçmişine ekle
-    if (!task.timeline) {
-        task.timeline = [];
-    }
-    task.timeline.push({
-        date: new Date().toISOString(),
-        action: `Görev durumu "${formatStatus(oldStatus)}" durumundan "${formatStatus(newStatus)}" durumuna güncellendi`,
-        user: JSON.parse(localStorage.getItem('profileData'))?.fullName || 'Anonim'
-    });
-    localStorage.setItem('tasks', JSON.stringify(tasks));
-    updateTaskTimeline(task.timeline);
-    showNotification('Görev durumu güncellendi', 'success');
-}
-// Durum formatla
-function formatStatus(status) {
-    const statuses = {
-        pending: 'Beklemede',
-        'in-progress': 'Devam Ediyor',
-        completed: 'Tamamlandı'
-    };
-    return statuses[status] || status;
-}
-// Modal kapatma
-function closeTaskDetailModal() {
-    document.getElementById('taskDetailModal').style.display = 'none';
-    currentTaskId = null;
-}
+    </script>
+</body>
+</html>
